force-app/main/default/objects/Project__c/fields/Budget_Hours__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hours__c</fullName>
    <description>Total budgeted hours for this project</description>
    <label>Budget Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>